@@ -98,6 +98,11 @@ Note that the special values 'user', 'core' and 'site' should be
 used literally, they will be substituted by the corresponding,
 platform specific, values.
 
+You can disable a given plugin ``myplugin`` by adding
+``-myplugin`` in BZR_PLUGIN_PATH. The plugin will not be loaded
+by ``bzr`` anymore and trying to import it with ``import
+bzrlib.plugins.myplugin`` will raise an import error.
+
 Examples:
 ^^^^^^^^^
 
@@ -116,6 +121,8 @@ Disabling all plugins (better achieved with --no-plugins):
 Overriding the default site plugin directory:
 ``BZR_PLUGIN_PATH='/path/to/my/site/plugins:-site':+user``
 
+Disabling a given ``myplugin`` plugin while retaining the others:
+``BZR_PLUGIN_PATH='-myplugin:+user'``
 
 
 BZRPATH
