@@ -51,6 +51,9 @@ New Features
   treats backslash as an escape character on Windows.   (Gordon Tyler,
   #392248)
 
+* Plugins can be disabled by adding ``-<plugin_name>`` in ``BZR_PLUGIN_PATH``.
+  (Vincent Ladeuil, #411413)
+
 * Tree-shape conflicts can be resolved by providing ``--take-this`` and
   ``--take-other`` to the ``bzr resolve`` command. Just marking the conflict
   as resolved is still accessible via the ``--done`` default action.
